Fix font size and alignment

--- a/style.css
+++ b/style.css
@@ -65,10 +65,12 @@ input[type="submit"] {
 
 .req {
     flex-direction: row-reverse;
+    text-align: right;
 }
 
 .res {
     flex-direction: row;
+    text-align: left;
 }
 
 .content {
@@ -77,7 +79,7 @@ input[type="submit"] {
     margin: 10px;
     padding: 10px 20px 10px 20px;
     border-radius: 25px;
-    font-size: 25px;
+    font-size: 15px;
 }
 
 .req>.content {
